# Mirror

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  desktop_main.py  main.py  pyproject.toml  seed_db.py
alembic/: env.py
alembic/versions/: 103f7f78a83c_create_initial_database_schema.py  106816920689_create_initial_database_schema.py  919b4b83d8c3_create_initial_database_schema.py  ea9780ed5759_create_initial_database_schema.py
app/: main.py
app/api/: health.py
app/api/v1/: health.py
app/api/v1/endpoints/: account.py  counterparty.py  file_upload.py  person.py  transaction.py
app/core/: config.py  database.py  taskiq_app.py
app/models/: __init__.py  account.py  counterparty.py  enums.py  file_metadata.py  person.py  transaction.py
app/repository/: account.py  base.py  counterparty.py  file_metadata.py  person.py  transaction.py
app/schemas/: account.py  analysis.py  base.py  counterparty.py  file_metadata.py  person.py  schemas.py  transaction.py
app/services/: account_service.py  counterparty_service.py  file_service.py  person_service.py  transaction_service.py
app/tasks/: tasks.py
app/tasks/utils/: parser_service.py
app_nicegui/: file_upload.py  management_center.py  navigation.py
app_streamlit/: Home.py  navigation.py
app_streamlit/pages/: 1_File_Upload.py  2_Account_Details.py  2_Transaction_Dashboard.py  3_Global_Dashboard.py  4_Counterparty_Analysis.py  5_Management_Center.py
scripts/: run_migrations.sh  start_api.sh  start_streamlit.sh  start_worker.sh
